<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btnAddTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_temperatura"/>

    <Button
        android:id="@+id/btnEditTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_temperatura"/>

    <Button
        android:id="@+id/btnViewHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_historial"/>
</LinearLayout>

