<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_temperatura"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSubmitTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_temperatura"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_a_la_pantalla_principal"
        android:layout_marginTop="16dp"/>

</LinearLayout>

