<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_gradient">


    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_temperaturas"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvTemperatureHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hay_temperaturas_registradas"
        android:textSize="16sp"/>
    </ScrollView>

    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_a_la_pantalla_principal"
        android:layout_marginTop="16dp"/>

    <!-- Aquí puedes añadir más detalles si lo necesitas -->
</LinearLayout>
